--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>About Myself</h2>
-          <p> I’ve love everything that’s going on with tech since I was young. So many opportunities are open when you look at the possibilities that an electronic device can bring. I didn’t know there were actually people working behind the magic of video
-            games I've once played as a kid. I grew up with my grandparents, and always enjoy solving technical needs. There wasn’t much discipline growing up so I had to do grasp the understanding of why learning is so important on my own. I’ve learned
-            the hard way but with very little of a path to see. Resilient Coders really opened my eyes to where I wanted to head and I’m thankful for the opportunity. I just want to one day have a solution for world peace. Even if we have to build a robot
-            to do it.</p>
+          <p> I’ve loved everything that’s been going on with tech since I was young. So many opportunities are open when you look at the possibilities that an electronic device can bring. I didn’t know there were actually people working behind the magic
+            of video games tha I've once played as a kid. I grew up with my grandparents, and always enjoed solving their technical needs. There wasn’t much discipline growing up so I had to grasp the understanding of why learning is so important on my
+            own. I’ve learned the hard way with very little direction. Resilient Coders really opened my eyes to where I wanted to head in the future and I’m thankful for the opportunity. I just want to one day have a solution for world peace. Even if
+            we have to build a robot to do it.</p>
           <!-- <p>This theme features stock photos by
             <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of
             <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
