--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/FriedUSB" class="btn btn-default btn-lg">
+              <a href="https://github.com/KeithTheDev" class="btn btn-default btn-lg">
                   <i class="fa fa-github fa-fw"></i>
                   <span class="network-name">Github</span>
                 </a>
