--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>About Myself</h2>
-          <p> I’ve loved everything that’s been going on with tech since I was young. So many opportunities are open when you look at the possibilities that an electronic device can bring. I didn’t know there were actually people working behind the magic
-            of video games tha I've once played as a kid. I grew up with my grandparents, and always enjoed solving their technical needs. There wasn’t much discipline growing up so I had to grasp the understanding of why learning is so important on my
-            own. I’ve learned the hard way with very little direction. Resilient Coders really opened my eyes to where I wanted to head in the future and I’m thankful for the opportunity. I just want to one day have a solution for world peace. Even if
-            we have to build a robot to do it.</p>
+          <p> Growing up I never had a grasp on what I wanted to do with my future. I was raised with my grandparents, and always enjoyed solving their technical needs. There wasn’t much discipline growing up, so I had to work on  grasping the understanding of why learning is was so important for my development on my own. I’ve learned the hard way with very little direction. I worked for a hospital for many years, I and didn’t see any growth in myself anymore and had the urge to change my life, do something different but had no idea what that was yet. Resilient Coders opened my eyes to where I wanted to head in the future and I’m thankful for the opportunity. I can now say I have the rest of the tools I need to build the future I want.</p>
           <!-- <p>This theme features stock photos by
             <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of
             <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
@@ -91,9 +88,9 @@
       <div class="col-lg-8 mx-auto">
         <h2>Projects</h2>
         <p>Projects I've worked on!</p>
-        <a href="https://github.com/KeithTheDev/StopLight" class="btn btn-default btn-lg">Stop Light w/ JS</a>
-        <a href="https://github.com/KeithTheDev/website1" class="btn btn-default btn-lg">Mobile Responsive Site</a>
-        <a href="https://github.com/KeithTheDev/Spot1" class="btn btn-default btn-lg">A Game of Chances w/ JS</a>
+        <a href="https://keiththedev.github.io/hondaExpress/" class="btn btn-default btn-lg">Honda Fan Page</a>
+        <a href="https://keiththedev.github.io/personalExpressApp/" class="btn btn-default btn-lg">Express App</a>
+        <a href="https://keiththedev.github.io/gamePart1/" class="btn btn-default btn-lg">Playing w/ Phaser</a>
 
       </div>
     </div>
@@ -120,7 +117,7 @@
                 </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/keith-goodrich-86b368163/" class="btn btn-default btn-lg">
+              <a href="https://www.linkedin.com/in/keithmgoodrich/" class="btn btn-default btn-lg">
                 <i class="fa fa-linkedin fa-fw"></i>
                 <span class="network-name">LinkedIn</span>
                 </a>
@@ -149,7 +146,7 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script> -->
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
